Drop "deprecation" suppressions